--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                 <div class="nav-links">
                     <a href="#servicos">Serviços</a>
                     <a href="crm-para-empresas.html">CRM</a>
+                    <a href="agentes-ia-whatsapp.html">Agentes IA</a>
                     <a href="#portfolio">Portfólio</a>
                     <a href="#faq">Dúvidas</a>
                     <a href="#contato" class="btn btn-primary">Solicitar Orçamento</a>
@@ -527,6 +528,49 @@
                 </div>
                 <div class="crm-visual hidden-right">
                     <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80" alt="Dashboard CRM e Financeiro" loading="lazy" decoding="async" width="600" height="400">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 3.8. Destaque Agentes IA WhatsApp -->
+    <section id="ia-whatsapp" class="crm-section" style="background-color: #f8fafc;">
+        <div class="container">
+            <div class="crm-wrapper">
+                <div class="crm-visual hidden-left">
+                    <img src="https://images.unsplash.com/photo-1531746790731-6c087fecd65a?auto=format&fit=crop&w=800&q=80" alt="Agente de Inteligência Artificial" loading="lazy" decoding="async" width="600" height="400" style="border-radius: 8px; box-shadow: 0 20px 40px rgba(0,0,0,0.1);">
+                </div>
+                <div class="crm-content hidden-right">
+                    <h2 class="section-title" style="text-align: left;">Agentes de IA para WhatsApp</h2>
+                    <p class="section-subtitle" style="text-align: left; margin-bottom: 1.5rem;">
+                        Automatize seu atendimento com inteligência artificial avançada. Nossos agentes não são apenas chatbots simples; eles entendem o contexto, respondem dúvidas complexas e agendam reuniões 24 horas por dia.
+                    </p>
+                    <p style="margin-bottom: 2rem; color: #64748b;">
+                        Conectamos a IA ao seu banco de dados para consultas em tempo real (estoque, pedidos, status). Agilize seu atendimento, reduza filas e qualifique leads automaticamente.
+                    </p>
+                    
+                    <ul class="crm-features-list">
+                        <li>
+                            <svg viewBox="0 0 24 24"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" /></svg>
+                            Atendimento 24/7 Instantâneo
+                        </li>
+                        <li>
+                            <svg viewBox="0 0 24 24"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" /></svg>
+                            Consulta ao Banco de Dados
+                        </li>
+                        <li>
+                            <svg viewBox="0 0 24 24"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" /></svg>
+                            Agilidade e Redução de Filas
+                        </li>
+                        <li>
+                            <svg viewBox="0 0 24 24"><path d="M9,20.42L2.79,14.21L5.62,11.38L9,14.77L18.88,4.88L21.71,7.71L9,20.42Z" /></svg>
+                            Integração com CRM e Agenda
+                        </li>
+                    </ul>
+                    
+                    <div style="display: flex; gap: 15px; flex-wrap: wrap; margin-top: 20px;">
+                        <a href="#contato" class="btn btn-primary" onclick="document.getElementById('objetivo').value='Agente de IA para WhatsApp'">Quero Automatizar meu WhatsApp</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1001,6 +1045,7 @@
                             <option>Vender um produto</option>
                             <option>Gerar leads (orçamentos)</option>
                             <option>Apresentar a empresa</option>
+                            <option>Agente de IA para WhatsApp</option>
                             <option>Consultoria SEO</option>
                             <option>Outro</option>
                         </select>
