--- a/index.html
+++ b/index.html
@@ -295,9 +295,10 @@
                     <span class="bar"></span>
                 </div>
                 <div class="nav-links">
+                    <a href="index.html">Home</a>
                     <a href="#servicos">Serviços</a>
                     <a href="crm-para-empresas.html">CRM</a>
-                    <a href="agentes-ia-whatsapp.html">Agentes IA</a>
+                    <a href="agente-ia-whatsapp.html">Agentes IA</a>
                     <a href="#portfolio">Portfólio</a>
                     <a href="#faq">Dúvidas</a>
                     <a href="#contato" class="btn btn-primary">Solicitar Orçamento</a>
@@ -1080,6 +1081,7 @@
                     <h4>Links Rápidos</h4>
                     <ul class="footer-links">
                         <li><a href="#servicos">Serviços</a></li>
+                        <li><a href="agente-ia-whatsapp.html">Agentes IA</a></li>
                         <li><a href="#portfolio">Portfólio</a></li>
                         <li><a href="#faq">Dúvidas Frequentes</a></li>
                         <li><a href="#contato">Solicitar Orçamento</a></li>
