--- a/agente-ia-whatsapp.html
+++ b/agente-ia-whatsapp.html
@@ -96,6 +96,9 @@
             <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="#contato" class="btn btn-cta">Quero Automatizar Meu WhatsApp</a>
                 <a href="#funcionalidades" class="btn btn-secondary">Ver Como Funciona</a>
+                <a href="https://wa.me/5511976678655?text=Ol%C3%A1!%20Quero%20testar%20o%20agente%20de%20IA." target="_blank" class="btn btn-primary" style="background-color: #25D366; border-color: #25D366;">
+                    Testar IA Agora
+                </a>
             </div>
         </div>
     </section>
